--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@capacitor/android": "^2.4.6",
+    "@capacitor/cli": "^2.4.6",
+    "@capacitor/core": "^2.4.6",
     "core-js": "^3.6.5",
+    "firebase": "^8.2.9",
     "vue": "^3.0.0"
   },
   "devDependencies": {
